--- a/rsmtool/notebooks/skll_model.ipynb
+++ b/rsmtool/notebooks/skll_model.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "skll_linear_models = ['Ridge', 'LinearSVR', 'Lasso']"
+    "skll_linear_models = ['Ridge', 'LinearSVR', 'Lasso', 'ElasticNet']"
    ]
   },
   {
@@ -104,8 +104,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
