Added human-human agreement to summary evaluation notebook

--- a/rsmtool/notebooks/summary/evaluation.ipynb
+++ b/rsmtool/notebooks/summary/evaluation.ipynb
@@ -32,9 +32,9 @@
     "def read_evals(model_list):\n",
     "    evals = []\n",
     "    for (model_id, config, csvdir) in model_list:\n",
-    "        csv_file = os.path.join(csvdir, '{}_eval_short.csv'.format(model_id))\n",
-    "        if os.path.exists(csv_file):\n",
-    "            df_eval = pd.read_csv(csv_file, index_col=0)\n",
+    "        eval_short_file = os.path.join(csvdir, '{}_eval_short.csv'.format(model_id))\n",
+    "        if os.path.exists(eval_short_file):\n",
+    "            df_eval = pd.read_csv(eval_short_file, index_col=0)\n",
     "            df_eval.index = [model_id]\n",
     "            \n",
     "            # figure out whether the score was scaled\n",
@@ -44,7 +44,12 @@
     "                                else '{} (rounded)'.format(col.split('.')[0])\n",
     "                                for col in df_eval.columns ]\n",
     "            df_eval.columns = new_column_names\n",
-    "            evals.append(df_eval)          \n",
+    "            consistency_csv_file = os.path.join(csvdir, '{}_consistency.csv'.format(model_id))\n",
+    "            if os.path.exists(consistency_csv_file):\n",
+    "                consistency_df = pd.read_csv(consistency_csv_file, index_col=0)\n",
+    "                df_eval['h-h-kappa'] = consistency_df.iloc[0]['wtkappa']\n",
+    "                df_eval['h-h-corr'] = consistency_df.iloc[0]['corr']\n",
+    "            evals.append(df_eval)  \n",
     "    if len(evals) > 0:\n",
     "        df_evals = pd.concat(evals)\n",
     "    else:\n",
