Fixing output columns

--- a/rsmtool/notebooks/summary/evaluation.ipynb
+++ b/rsmtool/notebooks/summary/evaluation.ipynb
@@ -49,7 +49,7 @@
     "                consistency_df = pd.read_csv(consistency_csv_file, index_col=0)\n",
     "                df_eval['h-h-kappa'] = consistency_df.iloc[0]['wtkappa']\n",
     "                df_eval['h-h-corr'] = consistency_df.iloc[0]['corr']\n",
-    "            evals.append(df_eval)  \n",
+    "            evals.append(df_eval) \n",
     "    if len(evals) > 0:\n",
     "        df_evals = pd.concat(evals)\n",
     "    else:\n",
@@ -108,8 +108,8 @@
    "source": [
     "if not df_eval.empty:\n",
     "     display(HTML(df_eval[['N',\n",
-    "                           'system score type',\n",
-    "                           'corr', 'R2', 'RMSE',\n",
+    "                           'system score type', 'h-h-corr',\n",
+    "                           'corr', 'R2', 'RMSE', 'h-h-kappa',\n",
     "                           'wtkappa (rounded)', 'kappa (rounded)',\n",
     "                           'exact_agr (rounded)', 'adj_agr (rounded)']].to_html(index=True, classes = ['sortable'],\n",
     "                                                                                escape=False,\n",
