--- a/rsmtool/notebooks/summary/evaluation.ipynb
+++ b/rsmtool/notebooks/summary/evaluation.ipynb
@@ -44,11 +44,14 @@
     "                                else '{} (rounded)'.format(col.split('.')[0])\n",
     "                                for col in df_eval.columns ]\n",
     "            df_eval.columns = new_column_names\n",
+    "            # Get human-human scores from the other file\n",
     "            consistency_csv_file = os.path.join(csvdir, '{}_consistency.csv'.format(model_id))\n",
     "            if os.path.exists(consistency_csv_file):\n",
     "                consistency_df = pd.read_csv(consistency_csv_file, index_col=0)\n",
-    "                df_eval['h-h-kappa'] = consistency_df.iloc[0]['wtkappa']\n",
+    "                df_eval['h-h-wtkappa'] = consistency_df.iloc[0]['wtkappa']\n",
     "                df_eval['h-h-corr'] = consistency_df.iloc[0]['corr']\n",
+    "                df_eval['h-h-exact_agr'] = consistency_df.iloc[0]['exact_agr']\n",
+    "                df_eval['h-h-adj_agr'] = consistency_df.iloc[0]['adj_agr']\n",
     "            evals.append(df_eval) \n",
     "    if len(evals) > 0:\n",
     "        df_evals = pd.concat(evals)\n",
@@ -59,6 +62,30 @@
     "df_eval = read_evals(model_list)\n",
     "if not df_eval.empty:\n",
     "    df_eval.to_csv(join(output_dir, '{}_eval_short.csv'.format(summary_id)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Rename columns and add additional comparison columns\n",
+    "\n",
+    "# Ensure that all numeric columns are actually numbers\n",
+    "# (They probably are, but just in case)\n",
+    "df_eval.apply(pd.to_numeric, errors='ignore')\n",
+    "# Rename columns to clarify human-machine vs human-human\n",
+    "df_eval.rename(columns = {'corr':'h-m-corr', 'wtkappa (rounded)':'h-m-wtkappa (rounded)',\n",
+    "                         'exact_agr (rounded)': 'h-m-exact_agr (rounded)',\n",
+    "                         'adj_agr (rounded)': 'h-m-adj_agr (rounded)'}, inplace = True)\n",
+    "# Add additional columns showing difference between scores\n",
+    "df_eval['h-h-corr h-m-corr diff'] = df_eval['h-h-corr'] - df_eval['h-m-corr']\n",
+    "df_eval['h-h-wtkappa h-m-wtkappa diff'] = df_eval['h-h-wtkappa'] - df_eval['h-m-wtkappa (rounded)']\n",
+    "df_eval['h-h-exact_agr h-m-exact_agr diff'] = df_eval['h-h-exact_agr'] - df_eval['h-m-exact_agr (rounded)']\n",
+    "df_eval['h-h-adj_agr h-m-adj_agr diff'] = df_eval['h-h-adj_agr'] - df_eval['h-m-adj_agr (rounded)']\n"
    ]
   },
   {
@@ -109,9 +136,11 @@
     "if not df_eval.empty:\n",
     "     display(HTML(df_eval[['N',\n",
     "                           'system score type', 'h-h-corr',\n",
-    "                           'corr', 'R2', 'RMSE', 'h-h-kappa',\n",
-    "                           'wtkappa (rounded)', 'kappa (rounded)',\n",
-    "                           'exact_agr (rounded)', 'adj_agr (rounded)']].to_html(index=True, classes = ['sortable'],\n",
+    "                           'h-m-corr', 'h-h-corr h-m-corr diff', 'R2', 'RMSE', 'h-h-wtkappa',\n",
+    "                           'h-m-wtkappa (rounded)', 'h-h-wtkappa h-m-wtkappa diff', 'kappa (rounded)',\n",
+    "                           'h-h-exact_agr', 'h-m-exact_agr (rounded)', 'h-h-exact_agr h-m-exact_agr diff',\n",
+    "                           'h-h-adj_agr', 'h-m-adj_agr (rounded)', \n",
+    "                           'h-h-adj_agr h-m-adj_agr diff']].to_html(index=True, classes = ['sortable'],\n",
     "                                                                                escape=False,\n",
     "                                                                                float_format = int_or_float_format_func)))\n",
     "else:\n",
