Additional columns added to summary report

--- a/rsmtool/notebooks/summary/evaluation.ipynb
+++ b/rsmtool/notebooks/summary/evaluation.ipynb
@@ -52,6 +52,7 @@
     "                df_eval['h-h-corr'] = consistency_df.iloc[0]['corr']\n",
     "                df_eval['h-h-exact_agr'] = consistency_df.iloc[0]['exact_agr']\n",
     "                df_eval['h-h-adj_agr'] = consistency_df.iloc[0]['adj_agr']\n",
+    "                df_eval['h-h-kappa'] = consistency_df.iloc[0]['kappa']\n",
     "            evals.append(df_eval) \n",
     "    if len(evals) > 0:\n",
     "        df_evals = pd.concat(evals)\n",
@@ -79,13 +80,15 @@
     "df_eval.apply(pd.to_numeric, errors='ignore')\n",
     "# Rename columns to clarify human-machine vs human-human\n",
     "df_eval.rename(columns = {'corr':'h-m-corr', 'wtkappa (rounded)':'h-m-wtkappa (rounded)',\n",
-    "                         'exact_agr (rounded)': 'h-m-exact_agr (rounded)',\n",
-    "                         'adj_agr (rounded)': 'h-m-adj_agr (rounded)'}, inplace = True)\n",
+    "                          'exact_agr (rounded)': 'h-m-exact_agr (rounded)',\n",
+    "                          'adj_agr (rounded)': 'h-m-adj_agr (rounded)', \n",
+    "                          'kappa (rounded)': 'h-m-kappa (rounded)'}, inplace = True)\n",
     "# Add additional columns showing difference between scores\n",
     "df_eval['h-h-corr h-m-corr diff'] = df_eval['h-h-corr'] - df_eval['h-m-corr']\n",
     "df_eval['h-h-wtkappa h-m-wtkappa diff'] = df_eval['h-h-wtkappa'] - df_eval['h-m-wtkappa (rounded)']\n",
     "df_eval['h-h-exact_agr h-m-exact_agr diff'] = df_eval['h-h-exact_agr'] - df_eval['h-m-exact_agr (rounded)']\n",
-    "df_eval['h-h-adj_agr h-m-adj_agr diff'] = df_eval['h-h-adj_agr'] - df_eval['h-m-adj_agr (rounded)']\n"
+    "df_eval['h-h-adj_agr h-m-adj_agr diff'] = df_eval['h-h-adj_agr'] - df_eval['h-m-adj_agr (rounded)']\n",
+    "df_eval['h-h-kappa h-m-kappa diff'] = df_eval['h-h-kappa'] - df_eval['h-m-kappa (rounded)']\n"
    ]
   },
   {
@@ -137,7 +140,8 @@
     "     display(HTML(df_eval[['N',\n",
     "                           'system score type', 'h-h-corr',\n",
     "                           'h-m-corr', 'h-h-corr h-m-corr diff', 'R2', 'RMSE', 'h-h-wtkappa',\n",
-    "                           'h-m-wtkappa (rounded)', 'h-h-wtkappa h-m-wtkappa diff', 'kappa (rounded)',\n",
+    "                           'h-m-wtkappa (rounded)', 'h-h-wtkappa h-m-wtkappa diff', \n",
+    "                           'h-h-kappa', 'h-m-kappa (rounded)', 'h-h-kappa h-m-kappa diff',\n",
     "                           'h-h-exact_agr', 'h-m-exact_agr (rounded)', 'h-h-exact_agr h-m-exact_agr diff',\n",
     "                           'h-h-adj_agr', 'h-m-adj_agr (rounded)', \n",
     "                           'h-h-adj_agr h-m-adj_agr diff']].to_html(index=True, classes = ['sortable'],\n",
